[options]
include_package_data = True
install_requires =
    numpy
    scikit-learn!=0.22.0
    scipy

[options.packages.find]
where = lightgbm

[flake8]
ignore =
    # line too long
    E501,
    # line break occurred before a binary operator
    W503
exclude =
    ./.nuget,
    ./external_libs,
    ./lightgbm-python,
    ./python-package/build,
    ./python-package/compile
